# dealradar

./: .env.example  .gitignore  .make-completion.bash  CLAUDE.md  Containerfile  DECISIONS.md  Makefile  N8N_WORKFLOWS.md  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  schema.sql  scraper.py  seed.sql  web_server.py
.github/workflows/: build.yaml  deploy.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
migrations/: 001_remove_duplicate_value_score.sql  002_add_source_request_to_posts.sql  003_add_continue_evaluate_to_posts.sql
src/dealradar/: __init__.py
src/dealradar/api/: __init__.py  client.py  scraper.py
src/dealradar/config/: __init__.py  settings.py
src/dealradar/database/: __init__.py  models.py  tracker.py
src/dealradar/web/: __init__.py  app.py  routes.py
src/dealradar/web/static/css/: style.css
src/dealradar/web/templates/: base.html  deals_list.html  index.html  request_detail.html  request_form.html  requests_list.html  search_results.html
src/dealradar/web/templates/components/: deal_card.html  search_summary.html
tests/: __init__.py  conftest.py  test_db_tracker.py  test_main.py  test_scraper.py
